@@ -1,6 +1,5 @@
 #include "alutInternal.h"
 #include <ctype.h>
-#include <stdint.h>
 #include <stdio.h>
 #include <string.h>
 #include <sys/types.h>
